# saocom_project

./: .gitignore  .pre-commit-config.yaml  .~lock.SAOCOM_DEM_Validation_Study.pptx#  .~lock.Visually_Driven_SAOCOM_Presentation.pptx#  CLAUDE.md  FINAL_STATUS.txt  LAND_COVER_FIXES_SUMMARY.md  MAP_FIXES_COMPLETE.md  Makefile  NOTEBOOK_GUIDE.md  NOTEBOOK_INTEGRATION_SUMMARY.md  QA_FIXES_APPLIED.md  README.md  REFACTORING_GUIDE.md  VISUALIZATIONS_ADDED.md  Visually_Driven_SAOCOM_Presentation.pptx  WORK_SUMMARY.txt  add_analysis_cells_to_notebook.py  add_land_cover_fixes.py  add_more_visualizations.py  add_radar_shadow_to_notebook.py  analysis_script.py.py  build_final_notebook.py  check_data_format.py  clean_script.py.py  developt ppt.py  environment.yaml  environment.yml  extracted_imports.txt  fix_cell_39.py  fix_slope_variables.py  fix_transform_variable.py  graphics_book.ipynb  insert_radar_shadow_cells.py  main.py  main_saocon.ipynb  notebook_structure_analysis.json  png_search_results.txt  pyproject.toml  qa_notebook_variables.py  (+20 more)
.claude/: settings.local.json
_archive/: README.md
data/: README.md  copernicus.tif.aux.xml  corine_clip.tfw  lclu_crop.tif.aux.xml  tinitaly.tif.aux.xml  verona.csv
docs/: .~lock.o3 Text.docx#  CONTROL_POINTS_GUIDE.md  Concise_SAOCOM_Presentation.pptx  DATA_DICTIONARY.md  Formatted_SAOCOM_Validation_Presentation.pptx  METHODS.md  QUICK_START_SHADOW_ANALYSIS.md  RADAR_SHADOW_ANALYSIS.md  Visual_SAOCOM_Presentation.pptx  week2.docx
notebooks/: 00_data_intake.ipynb  01_cleaning.ipynb  control_points_identification_cells.py  radar_shadow_analysis_cells.py
results/: GLO30_native.tif  copernicus_10m_ellipsoidal_masked.tif  copernicus_10m_resampled.tif  copernicus_10m_wgs84.tif  copernicus_10m_wgs84_pyproj.tif  (+42 more)
(+75 files in other folders)
